1.7.8.dev0
 * #621: Add optional authentication to the ntfy monitoring hook.
 * With the "create" action, only one of "--list" ("--files") and "--progress" flags can be used.
   This lines up with the new behavior in Borg 2.0.0b5.
 * Internally support new Borg 2.0.0b5 "--filter" status characters / item flags for the "create"
   action.

1.7.7
 * #642: Add MySQL database hook "add_drop_database" configuration option to control whether dumped
   MySQL databases get dropped right before restore.
 * #643: Fix for potential data loss (data not getting backed up) when dumping large "directory"
   format PostgreSQL/MongoDB databases. Prior to the fix, these dumps would not finish writing to
   disk before Borg consumed them. Now, the dumping process completes before Borg starts. This only
   applies to "directory" format databases; other formats still stream to Borg without using
   temporary disk space.
 * Fix MongoDB "directory" format to work with mongodump/mongorestore without error. Prior to this
   fix, only the "archive" format worked.

1.7.6
 * #393, #438, #560: Optionally dump "all" PostgreSQL/MySQL databases to separate files instead of
   one combined dump file, allowing more convenient restores of individual databases. You can enable
   this by specifying the database dump "format" option when the database is named "all".
 * #602: Fix logs that interfere with JSON output by making warnings go to stderr instead of stdout.
 * #622: Fix traceback when include merging configuration files on ARM64.
 * #629: Skip warning about excluded special files when no special files have been excluded.
 * #630: Add configuration options for database command customization: "list_options",
   "restore_options", and "analyze_options" for PostgreSQL, "restore_options" for MySQL, and
   "restore_options" for MongoDB.

1.7.5
 * #311: Override PostgreSQL dump/restore commands via configuration options.